Updated README
Updated README.md to enhance clarity and fix formatting issues, including feature descriptions and technology versions.